@@ -272,6 +272,8 @@ struct gdbarch
   gdbarch_workitem_global_id_ftype *workitem_global_id = nullptr;
   gdbarch_workitem_local_size_ftype *workitem_local_size = nullptr;
   gdbarch_workitem_global_size_ftype *workitem_global_size = nullptr;
+  gdbarch_kernel_instance_id_ftype *kernel_instance_id = nullptr;
+  gdbarch_entry_point_ftype *entry_point = nullptr;
 };
 
 /* Create a new ``struct gdbarch'' based on information provided by
@@ -548,6 +550,8 @@ verify_gdbarch (struct gdbarch *gdbarch)
   /* Skip verify of workitem_global_id, has predicate.  */
   /* Skip verify of workitem_local_size, has predicate.  */
   /* Skip verify of workitem_global_size, has predicate.  */
+  /* Skip verify of kernel_instance_id, has predicate.  */
+  /* Skip verify of entry_point, has predicate.  */
   if (!log.empty ())
     internal_error (_("verify_gdbarch: the following are invalid ...%s"),
 		    log.c_str ());
@@ -1464,6 +1468,18 @@ gdbarch_dump (struct gdbarch *gdbarch, struct ui_file *file)
   gdb_printf (file,
 	      "gdbarch_dump: workitem_global_size = <%s>\n",
 	      host_address_to_string (gdbarch->workitem_global_size));
+  gdb_printf (file,
+	      "gdbarch_dump: gdbarch_kernel_instance_id_p() = %d\n",
+	      gdbarch_kernel_instance_id_p (gdbarch));
+  gdb_printf (file,
+	      "gdbarch_dump: kernel_instance_id = <%s>\n",
+	      host_address_to_string (gdbarch->kernel_instance_id));
+  gdb_printf (file,
+	      "gdbarch_dump: gdbarch_entry_point_p() = %d\n",
+	      gdbarch_entry_point_p (gdbarch));
+  gdb_printf (file,
+	      "gdbarch_dump: entry_point = <%s>\n",
+	      host_address_to_string (gdbarch->entry_point));
   if (gdbarch->dump_tdep != NULL)
     gdbarch->dump_tdep (gdbarch, file);
 }
@@ -5777,4 +5793,52 @@ set_gdbarch_workitem_global_size (struct gdbarch *gdbarch,
 				  gdbarch_workitem_global_size_ftype workitem_global_size)
 {
   gdbarch->workitem_global_size = workitem_global_size;
+}
+
+bool
+gdbarch_kernel_instance_id_p (struct gdbarch *gdbarch)
+{
+  gdb_assert (gdbarch != NULL);
+  return gdbarch->kernel_instance_id != NULL;
+}
+
+value *
+gdbarch_kernel_instance_id (struct gdbarch *gdbarch, thread_info *tp)
+{
+  gdb_assert (gdbarch != NULL);
+  gdb_assert (gdbarch->kernel_instance_id != NULL);
+  if (gdbarch_debug >= 2)
+    gdb_printf (gdb_stdlog, "gdbarch_kernel_instance_id called\n");
+  return gdbarch->kernel_instance_id (gdbarch, tp);
+}
+
+void
+set_gdbarch_kernel_instance_id (struct gdbarch *gdbarch,
+				gdbarch_kernel_instance_id_ftype kernel_instance_id)
+{
+  gdbarch->kernel_instance_id = kernel_instance_id;
+}
+
+bool
+gdbarch_entry_point_p (struct gdbarch *gdbarch)
+{
+  gdb_assert (gdbarch != NULL);
+  return gdbarch->entry_point != NULL;
+}
+
+bool
+gdbarch_entry_point (struct gdbarch *gdbarch, CORE_ADDR *entry_p)
+{
+  gdb_assert (gdbarch != NULL);
+  gdb_assert (gdbarch->entry_point != NULL);
+  if (gdbarch_debug >= 2)
+    gdb_printf (gdb_stdlog, "gdbarch_entry_point called\n");
+  return gdbarch->entry_point (entry_p);
+}
+
+void
+set_gdbarch_entry_point (struct gdbarch *gdbarch,
+			 gdbarch_entry_point_ftype entry_point)
+{
+  gdbarch->entry_point = entry_point;
 }
